// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Voucherify's identifyCustomer destination action: all fields 1`] = `
Object {
  "email": "kid@beata.ms",
  "source_id": "*A@y(Bl1M%r2$",
  "traits": Object {
    "testType": "*A@y(Bl1M%r2$",
  },
}
`;

exports[`Testing snapshot for Voucherify's identifyCustomer destination action: required fields 1`] = `
Object {
  "source_id": "*A@y(Bl1M%r2$",
}
`;
